# market-feed

./: .gitignore  .pre-commit-config.yaml  config.yaml  curve_token_config.yaml  fetch_articles.py  get_curve_tokens.py  pyproject.toml  update_config.py  usdl_stablecoin_news.json
market_feed/: __init__.py  config.py  news.py  rss_feed.py
market_feed/feeds/: __init__.py  news.py  rss.py
market_feed/utils/: arabic_utils.py  chainlist_utils.py  coin_utils.py  content_utils.py  date_utils.py  json_utils.py  logger.py  relevance_analyzer.py  schedule_utils.py  scheduler.py
tests/: test_arabic_utils.py
token_news/: steth_news.json
